# mecademic_cycle_time_repport

./: .gitignore  README.md  pyproject.toml
.github/agents/: qa-test-builder.agent.md  test-repair.agent.md  test-review.agent.md
.github/instructions/: testing.instructions.md
artifacts/rendered_programs/: program__baseline-pick-random-1.mxprog
artifacts/test_RBT1/: records.csv  report.json  report.md  scenario_summary.csv
artifacts/test_RBT1/rendered_programs/: test_RBT1__baseline-pick_position-best.mxprog  test_RBT1__baseline-pick_position-random-1.mxprog  test_RBT1__baseline-pick_position-random-10.mxprog  test_RBT1__baseline-pick_position-random-2.mxprog  test_RBT1__baseline.mxprog  (+21 more)
artifacts/test_RBT2/: records.csv  report.json  report.md  scenario_summary.csv
docs/: example-usage.md  scenarios-template.yaml
src/mecademic_cycle_report/: __init__.py  analysis.py  checkpoint_spec.py  cli.py  config.py  mxprog_inspection.py  program_template.py  reporting.py  robot_client.py  runner.py  scenario_matrix.py
src/mecademic_cycle_report.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analysis.py  test_checkpoint_spec.py  test_cli.py  test_mxprog_inspection.py  test_program_template.py  test_reporting.py  test_robot_client.py  test_runner.py  test_scenario_matrix.py
tests/fixtures/: checkpoints.yaml  sample.mxprog  scenarios.yaml  test_RBT1.mxprog  test_RBT1.scenarios.yaml  test_RBT2.mxprog  test_RBT2.scenarios.yaml  test_RBT2.simple.scenarios.yaml  test_RBT3.mxprog  test_RBT3.simple.scenarios.yaml
(+14 files in other folders)
